--- a/Website/Pages/Index.cshtml
+++ b/Website/Pages/Index.cshtml
@@ -18,7 +18,7 @@ else
     {
         @if (Model.Projects.Count == 0)
         {
-            <h1 style="margin-top: 500px">Нічого не знайдено</h1>
+            <h1>Нічого не знайдено</h1>
         }
         else
         {
