--- a/Website/Pages/Shared/_Layout.cshtml
+++ b/Website/Pages/Shared/_Layout.cshtml
@@ -8,19 +8,16 @@
 </head>
 <body>
     <div class="navbar">
-        <a asp-page="./Index">Home</a>
+        <a asp-page="./Index">Головна</a>
         <form class="search-form" method="get" action="/Index">
-            <input type="text" name="search" placeholder="Search...">
-            <button class="search-btn">Search</button>
+            <input type="text" name="search" placeholder="Пошук...">
+            <button class="search-btn">Знайти</button>
         </form>
     </div>
     <div class="container">
         @RenderBody()
     </div>
-    <div class="footer">
-        <p>
-             © 2023
-        </p>
-    </div>
+    <footer class="footer">
+    </footer>
 </body>
 </html>
